port, part 2